<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigationMenu"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/black_transparent_60"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themovieguide"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/appTitle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/ordenar"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/topRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mais_votados"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/upComing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lancamentos"
                android:textColor="@color/white" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:visibility="invisible"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/radioOptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/labelCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pais" />

            <Spinner
                android:id="@+id/spinnerCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/idioma" />

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/labelSwitchAdultContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permitir_conteudo_adulto"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/adultContentSwitch"
            app:layout_constraintEnd_toStartOf="@id/adultContentSwitch"
            app:layout_constraintBottom_toBottomOf="@id/adultContentSwitch"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/adultContentSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinners" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>