<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/actionSearch"
            android:icon="@drawable/ic_action_action_search"
            android:orderInCategory="100"
            android:title="@string/pesquisar"
            app:showAsAction="always" />
        <item
            android:id="@+id/favoriteList"
            android:icon="@drawable/ic_favorite_red_24dp"
            android:orderInCategory="100"
            android:title="@string/pesquisar"
            app:showAsAction="always" />
</menu>