<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000"
    tools:context=".ui.activitys.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/appbar"
            layout="@layout/material_searh_bar"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation_slide_from_right"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical" />

        <include
            android:id="@+id/progressBar"
            layout="@layout/progress_layout"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/navigation_view" />

</androidx.drawerlayout.widget.DrawerLayout>
