<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favoriteMovie"
        android:icon="@drawable/ic_favorite_border_red_24dp"
        android:orderInCategory="100"
        android:title="@string/pesquisar"
        app:showAsAction="always" />
</menu>